# aoc

./: .gitignore  CMakeLists.txt  README.md  aoc.h  aoc_day.cmake  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day17.cpp  day18.cpp  day2.cpp  day20.cpp  day21.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day7.cpp  day8.cpp  day9.cpp  vcpkg.json  zip_longest.hpp
.devcontainer/: Dockerfile  devcontainer.json
2022/: CMakeLists.txt  day1.cpp  day10.cpp  day12.cpp  day15.cpp  day16.cpp  day17.cpp  day19.cpp  day2.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day6.cpp  day7.cpp
2023/: CMakeLists.txt  aoc.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day15.cpp  day16.cpp  day17.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  template.cxx
2024/: .clang-format  CMakeLists.txt  aoc2024.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  grid.hpp  hana_structured_bindings.hpp  main.cpp  simple_timer.hpp  test.cpp
common/: aoc.h  grid.h
